Basic connection with Dogtag CA